--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14' # Specify the Node.js version
+  uses: actions/setup-node@v3
+  with:
+    node-version: '18'
 
       - name: Install dependencies
         run: npm install
