--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -17,13 +17,14 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v4
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          deno-version: v1.x
+          node-version: '20' # Define a versão do Node.js
+          cache: 'npm'
 
       - name: Run linter
-        run: deno lint
+        run: npm lint
 
       - name: Run tests
         run: npm test -A
